deploy heart failure model with web application

--- a/src/templates/heart.html
+++ b/src/templates/heart.html
@@ -49,7 +49,7 @@
         <div class="row">
           <div class="top-section-info">
             <div class="top-section-text text-center" style="margin-top:-70px" ;>
-              <form class="well form-horizontal" action="/breastcancer" method="POST" id="contact_form">
+              <form class="well form-horizontal" action="/heart" method="POST" id="contact_form">
                 <fieldset>
                   <div class="form-group">
                     <label class="col-md-4 control-label"></label>
@@ -205,7 +205,7 @@
 
                   <div class="res">
 
-                    <h3 style="color: rgb(12, 10, 39);">{{prediction}}</h3>
+                    <h3 style="color: rgb(12, 10, 39);">{{predict}}</h3>
                   </div>
                 </fieldset>
               </form>
@@ -231,6 +231,7 @@
               which can lead to heart attack.</p>
           </div>
         </div>
+        
         <div class="col-md-9 col-sm-8 col-xs-12">
           <div style="visibility: visible;" class="col-sm-9 more-features-box">
             <div class="more-features-box-text">
