--- a/src/templates/pneumonia.html
+++ b/src/templates/pneumonia.html
@@ -29,8 +29,9 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="{{url_for('index')}}"><img src="{{url_for('static', filename='img/logo.png')}}"
-                  class="img-responsive" style="width:400px;height: 50px; margin-top: -18px;"></a>
+              <a class="navbar-brand" href="{{url_for('index')}}"><img
+                  src="{{url_for('static', filename='img/logo.png')}}" class="img-responsive"
+                  style="width:400px;height: 50px; margin-top: -18px;"></a>
             </div>
             <div class="collapse navbar-collapse navbar-right" id="myNavbar">
               <ul class="nav navbar-nav">
@@ -46,8 +47,51 @@
 
         </div>
       </nav>
+      <div class="container">
+        <div class="row">
+          <div class="top-section-info">
+            <div class="top-section-text text-center" style="margin-top:-70px" ;>
+              <form class="well form-horizontal" action="/heart" method="POST" id="contact_form">
+                <fieldset>
+                  <div class="form-group">
+                    <label class="col-md-4 control-label"></label>
+                    <div class="col-md-4 inputGroupContainer">
+                      <b>
+                        <p style="color:rgb(126, 5, 31); font-size: 22px; margin-bottom: 23px;">Pneumonia Diagnostic Using Image
+                        </p>
+                      </b>
+                    </div>
+                  </div>
 
+                  <!-- Text input-->
+                  
+                  <div class="form-group">
+                    <img id="blah" alt="image" width="150" height="150"/>
+
+                      <input type="file" 
+                            class='btn-img' onchange="document.getElementById('blah').src = window.URL.createObjectURL(this.files[0])">
+
+                        <div class="form-group">
+                          <label class="col-md-4 control-label"></label>
+                          <div class="col-md-4">
+                            <button type="submit" class="btn btn-warning">Predict <span
+                                class="glyphicon glyphicon-send"></span></button>
+                          </div>
+                        </div>  
+                    
+                  </div>
+
+                </fieldset>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+
+
+
+  </div>
 
 
   </section>
