--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Disease Prediction</title>
+  <title>Onsite Health Diagnostic - OHD</title>
 
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
