update pneumonia template

--- a/src/templates/pneumonia.html
+++ b/src/templates/pneumonia.html
@@ -19,7 +19,7 @@
 
 <body>
   <section id="top-section" class="top-section">
-    <div class="bg-color">
+    <div class="bg-colo">
       <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
           <div class="col-md-12">
@@ -57,13 +57,14 @@
                     <label class="col-md-4 control-label"></label>
                     <div class="col-md-4 inputGroupContainer">
                       <b>
-                        <p style="color:rgb(126, 5, 31); font-size: 22px; margin-bottom: 23px;">Pneumonia Diagnostic Using Image
+                        <p style="color:rgb(126, 5, 31); font-size: 22px; margin-bottom: 23px;">Pneumonia Diagnostic 
                         </p>
                       </b>
                     </div>
                   </div>
 
                   <!-- Text input-->
+                  
                   
                   <div class="form-group">
                     <img id="blah" alt="image" width="150" height="150"/>
