--- a/src/templates/pneumonia.html
+++ b/src/templates/pneumonia.html
@@ -51,7 +51,7 @@
         <div class="row">
           <div class="top-section-info">
             <div class="top-section-text text-center" style="margin-top:-70px" ;>
-              <form class="well form-horizontal" action="/heart" method="POST" id="contact_form">
+              <form class="well form-horizontal" action="/pneumonia" method="POST" id="upload_file"  enctype="multipart/form-data">
                 <fieldset>
                   <div class="form-group">
                     <label class="col-md-4 control-label"></label>
@@ -65,12 +65,10 @@
 
                   <!-- Text input-->
                   
-                  
                   <div class="form-group">
                     <img id="blah" alt="image" width="150" height="150"/>
 
-                      <input type="file" 
-                            class='btn-img' onchange="document.getElementById('blah').src = window.URL.createObjectURL(this.files[0])">
+                      <input type="file" name = "file" id = "imageUpload" accept = ".png, .jpg, .jpeg" class='btn-img' onchange="document.getElementById('blah').src = window.URL.createObjectURL(this.files[0])">
 
                         <div class="form-group">
                           <label class="col-md-4 control-label"></label>
@@ -79,9 +77,9 @@
                                 class="glyphicon glyphicon-send"></span></button>
                           </div>
                         </div>  
-                    
+                        <h3 style="color: black;">{{prediction}}</h3>
                   </div>
-
+                 
                 </fieldset>
               </form>
             </div>
