--- a/src/templates/disease.html
+++ b/src/templates/disease.html
@@ -38,7 +38,7 @@
                                 <li class=""><a href="{{url_for('heart')}}">Heart</a></li>
                                 <li class=""><a href="{{url_for('breastcancer')}}">Breast</a></li>
                                 <li class=""><a href="{{url_for('diabetes')}}">Diabetes</a></li>
-                                <li class=""><a href="##">Brain</a></li>
+                                <li class=""><a href="#">Brain</a></li>
                                
                             </ul>
                         </div>
