improve the template files

--- a/src/templates/diabetes.html
+++ b/src/templates/diabetes.html
@@ -39,7 +39,7 @@
                 <li class=""><a href="{{url_for('heart')}}">Heart</a></li>
                 <li class=""><a href="{{url_for('breastcancer')}}">Breast</a></li>
                 
-                <li class=""><a href="#">Pneumonia</a></li>
+                <li class=""><a href="{{url_for('pneumonia')}}">Pneumonia</a></li>
               </ul>
             </div>
           </div>
