--- a/src/templates/pneumonia.html
+++ b/src/templates/pneumonia.html
@@ -37,8 +37,9 @@
               <ul class="nav navbar-nav">
                 <li class="active"><a href="{{url_for('index')}}">Home</a></li>
                 <li class=""><a href="{{url_for('disease')}}">Disease</a></li>
-
-                <li class=""><a href="#about">About</a></li>
+                <li class=""><a href="{{url_for('breastcancer')}}">Breast</a></li>
+                <li class=""><a href="{{url_for('diabetes')}}">Diabetes</a></li>
+                <li class=""><a href="#">Malaria</a></li>
 
               </ul>
             </div>
