--- a/src/templates/disease.html
+++ b/src/templates/disease.html
@@ -35,10 +35,10 @@
                         <div class="collapse navbar-collapse navbar-right" id="myNavbar">
                             <ul class="nav navbar-nav">
                                 <li class="active"><a href="{{url_for('index')}}">Home</a></li>
-                                <li class=""><a href="{{url_for('heart')}}">Heart</a></li>
+                                <li class=""><a href="{{url_for('pneumonia')}}">Pneumonia</a></li>
                                 <li class=""><a href="{{url_for('breastcancer')}}">Breast</a></li>
                                 <li class=""><a href="{{url_for('diabetes')}}">Diabetes</a></li>
-                                <li class=""><a href="#">Brain</a></li>
+                                <li class=""><a href="{{url_for('heart')}}">Heart</a></li>
                                
                             </ul>
                         </div>
@@ -77,9 +77,34 @@
                 </div>
                 <div class="col-md-9 col-sm-8 col-xs-12">
                     <div style="visibility: visible;" class="col-sm-9 more-features-box">
+
                         <div class="more-features-box-text">
                             <div class="more-features-box-text-icon"> <i class="fa fa-angle-right"
                                     aria-hidden="true"></i> </div>
+                            <div class="more-features-box-text-description">
+                                <a href="{{url_for('pneumonia')}}">
+                                    <h3 style="color: rgb(29, 3, 51);">Pneumonia</h3>
+                                </a>
+                                <p>Pneumonia is an infection that inflames the air sacs in one or both lungs. The air
+                                    sacs may fill with fluid or pus (purulent material), causing cough with phlegm or
+                                    pus, fever, chills, and difficulty breathing. A variety of organisms, including
+                                    bacteria, viruses and fungi, can cause pneumonia.
+                                </p>
+                                <a href="{{url_for('pneumonia')}}"
+                                style="color: #0cb8b6; margin-top: 15px; padding-top:10px;">Predict
+                                with user input</a>
+
+                                <img src="{{url_for('static', filename='img/pneumonia.png')}}" class="img-responsive"
+                                    style=" width:240px;height: 270px;margin-top: 28px;">
+
+                               
+                            </div>
+                        <div class="more-features-box-text">
+                            <div class="more-features-box-text-icon"> <i class="fa fa-angle-right"
+                                    aria-hidden="true"></i> </div>
+
+
+                            
                             <div class="more-features-box-text-description">
                                 <a href="{{url_for('heart')}}">
                                     <h3 style="color: rgb(29, 3, 51);">Heart Failure</h3>
@@ -160,27 +185,7 @@
                                
                             </div>
                         </div>
-                        <div class="more-features-box-text">
-                            <div class="more-features-box-text-icon"> <i class="fa fa-angle-right"
-                                    aria-hidden="true"></i> </div>
-                            <div class="more-features-box-text-description">
-                                <a href="{{url_for('pneumonia')}}">
-                                    <h3 style="color: rgb(29, 3, 51);">Pneumonia</h3>
-                                </a>
-                                <p>Pneumonia is an infection that inflames the air sacs in one or both lungs. The air
-                                    sacs may fill with fluid or pus (purulent material), causing cough with phlegm or
-                                    pus, fever, chills, and difficulty breathing. A variety of organisms, including
-                                    bacteria, viruses and fungi, can cause pneumonia.
-                                </p>
-                                <a href="{{url_for('pneumonia')}}"
-                                style="color: #0cb8b6; margin-top: 15px; padding-top:10px;">Predict
-                                with user input</a>
-
-                                <img src="{{url_for('static', filename='img/pneumonia.png')}}" class="img-responsive"
-                                    style=" width:240px;height: 270px;margin-top: 28px;">
-
-                               
-                            </div>
+                        
                         </div>
                         <div class="more-features-box-text">
                             <div class="more-features-box-text-icon"> <i class="fa fa-angle-right"
