--- a/src/templates/heart.html
+++ b/src/templates/heart.html
@@ -19,7 +19,7 @@
 
 <body>
   <section id="top-section" class="top-section">
-    <div class="bg-color">
+    <div class="bg-colo">
       <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
           <div class="col-md-12">
