improve the template files

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -223,7 +223,7 @@
         </div>
         <div class="col-md-3 col-sm-3 col-xs-6">
           <div class="thumbnail">
-            <img src="{{url_for('static',filename='img/Developerrohan.jpeg')}}" alt="rohan Patankar" class="team-img">
+            <img src="{{url_for('static',filename='img/Developerrohan.jpg')}}" alt="rohan Patankar" class="team-img">
             <div class="caption">
               <h3>Rohan Patankar</h3>
               <p>Machine Learning Developer</p>
@@ -238,7 +238,7 @@
         </div>
         <div class="col-md-3 col-sm-3 col-xs-6">
           <div class="thumbnail">
-            <img src="{{url_for('static',filename='img/Developerapsara.jpeg')}}" alt="Apsara Budhathoki"
+            <img src="{{url_for('static',filename='img/Developerapsara.png')}}" alt="Apsara Budhathoki"
               class="team-img">
             <div class="caption">
               <h3>Apsara Budhathoki</h3>
