changes: template file modifications and improvements in UI

--- a/src/templates/breastcancer.html
+++ b/src/templates/breastcancer.html
@@ -201,7 +201,7 @@
                   </div>
 
                   <div class="res">
-                    <h3 style="color: rgb(12, 10, 39);">{{prediction}}</h3>
+                    <h3 style="color: rgba(6, 58, 82, 0.78);">{{prediction}}</h3>
                   </div>
                 </fieldset>
               </form>
