--- a/src/templates/diabetes.html
+++ b/src/templates/diabetes.html
@@ -147,7 +147,7 @@
                     </div>
                     <!-- Prediction Result section -->
                     <div class="res">
-                      <h3 style="color: rgb(12, 10, 39);">{{prediction}}</h3>
+                      <h3 style="color: rgba(6, 58, 82, 0.78);">{{prediction}}</h3>
                     </div>
                   </div>
                 </fieldset>
