--- a/src/templates/heart.html
+++ b/src/templates/heart.html
@@ -205,7 +205,7 @@
 
                   <div class="res">
 
-                    <h3 style="color: rgb(12, 10, 39);">{{predict}}</h3>
+                    <h3 style="color: rgba(6, 58, 82, 0.78);">{{predict}}</h3>
                   </div>
                 </fieldset>
               </form>
