--- a/src/templates/pneumonia.html
+++ b/src/templates/pneumonia.html
@@ -51,39 +51,68 @@
       <div class="container">
         <div class="row">
           <div class="top-section-info">
-            <div class="top-section-text text-center" style="margin-top:-70px" ;>
-              <form class="well form-horizontal" action="/pneumonia" method="POST" id="upload_file"  enctype="multipart/form-data">
+           
+             
                 <fieldset>
-                  <div class="form-group">
+                  
+
+                    <form action="/pneumonia" method="POST" enctype="multipart/form-data">
+                      <div class="form-group">
                     <label class="col-md-4 control-label"></label>
                     <div class="col-md-4 inputGroupContainer">
                       <b>
-                        <p style="color:rgb(126, 5, 31); font-size: 22px; margin-bottom: 23px;">Pneumonia Diagnostic 
+                        <p style="color:rgb(126, 5, 31); font-size: 22px;">Pneumonia Diagnostic
                         </p>
                       </b>
                     </div>
                   </div>
-
-                  <!-- Text input-->
-                  
-                  <div class="form-group">
-                    <img id="blah" alt="image" width="150" height="150"/>
-
-                      <input type="file" name = "file" id = "imageUpload" accept = ".png, .jpg, .jpeg" class='btn-img' onchange="document.getElementById('blah').src = window.URL.createObjectURL(this.files[0])">
-
-                        <div class="form-group">
-                          <label class="col-md-4 control-label"></label>
-                          <div class="col-md-4">
-                            <button type="submit" class="btn btn-warning">Predict <span
-                                class="glyphicon glyphicon-send"></span></button>
+                      <div class="contain">
+                        <div class="row">
+                          <div class="col-md-12">
+                            <div class="form-group">
+                              <label class="control-label"></label>
+                              <div class="preview-zone hidden">
+                                <div class="box box-solid">
+                                  <div class="box-header with-border">
+                                    <div><b>Preview</b></div>
+                                    <div class="box-tools pull-right">
+                                      <button type="button" class="btn btn-danger btn-xs remove-preview">
+                                        <i class="fa fa-times"></i> Reset
+                                      </button>
+                                    </div>
+                                  </div>
+                                  <div class="box-body"></div>
+                                </div>
+                              </div>
+                              <div class="dropzone-wrapper">
+                                <div class="dropzone-desc">
+                                  <i class="glyphicon glyphicon-download-alt"></i>
+                                  <p>Choose X-ray image file or drag it here.</p>
+                                </div>
+                                <input type="file" name="file" class="dropzone">
+                              </div>
+                            </div>
                           </div>
-                        </div>  
-                        <h3 style="color: black;">{{prediction}}</h3>
-                  </div>
+                        </div>
+                  
+                        <div class="col-md-4">
+                          <button type="submit" class="btn-custom">Predict <span
+                              class="glyphicon glyphicon-send"></span></button>
+                        </div>
+
+                        <h3 style="color: rgba(6, 58, 82, 0.78); margin-top: 10px;">{{prediction}}</h3>
+                      </div>
+                      
+                      
+                      
+                </div>
+                    </form>
+                 
+                  
                  
                 </fieldset>
-              </form>
-            </div>
+              
+            
           </div>
         </div>
       </div>
@@ -100,7 +129,7 @@
       <div class="row">
         <div class="col-md-3 col-sm-4 col-xs-12">
           <div class="section-title">
-            <h2 class="head-title lg-line">Pneumonia <br>Detection</h2>
+            <h2 class="head-title lg-line">Pneumonia <br>Diagnostic</h2>
             <hr class="botm-line">
             <p class="sec-para">Pneumonia is an infection that inflames the air sacs in one or both lungs. The air
               sacs may fill with fluid or pus (purulent material), causing cough with phlegm or
