--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -10,12 +10,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='/css/font-awesome.min.css')}}">
-  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='/css/bootstrap.min.css')}}">
+  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/font-awesome.min.css')}}">
+  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/bootstrap.min.css')}}">
   <link rel="icon" href="{{url_for('static', filename='img/disease2page.png')}}">
 
   <!-- Custom css file -->
-  <link rel="stylesheet" href="{{url_for('static',filename='/css/style.css')}}">
+  <link rel="stylesheet" href="{{url_for('static',filename='css/style.css')}}">
 
 
 </head>
@@ -242,7 +242,7 @@
               class="team-img">
             <div class="caption">
               <h3>Apsara Budhathoki</h3>
-              <p>Web Design & Development</p>
+              <p>Frontend Web developer</p>
               <ul class="list-inline">
                 <li><a href="https://apsarabudhathoki.github.io/apsarabudathoki/"><i class="fa fa-globe"></i></a></li>
                 <li><a href="https://www.linkedin.com/in/apsara-budhathoki-b0884a1b4/"><i
@@ -328,7 +328,7 @@
               <h4 class="white no-padding">About Us</h4>
             </div>
             <div class="info-sec">
-              <p>We are 3rd year engineering students who love to explore new tools & technologies and are highly
+              <p>We are the 3rd year engineering students who love to explore new tools & technologies and are highly
                 enthusiastic towards computer science. OHD (Onsite Health Diagnostic) is an open source project under
                 MIT Licence.</p>
             </div>
@@ -351,9 +351,9 @@
             </div>
             <div class="info-sec">
               <ul class="social-icon">
-                <li class="bglight-blue"><i class="fa fa-github"></i></li>
-                <li class="bgdark-blue"><i class="fa fa-google"></i></li>
-                <li class="bgred"><i class="fa fa-globe"></i></li>
+                <a href="https://github.com" style="color:white;"><li class="bglight-blue"><i class="fa fa-github"></i></li></a>
+                <a href="https://google.com" style="color:white;"><li class="bgdark-blue"><i class="fa fa-google"></i></li></a>
+                  <a href="https://wikipedia.com" style="color:white;"><li class="bgred"><i class="fa fa-globe"></i></li></a>
               </ul>
             </div>
           </div>
