--- a/src/templates/thyroid.html
+++ b/src/templates/thyroid.html
@@ -10,10 +10,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="icon" href="{{url_for('static', filename='img/disease2page.png')}}">
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='/css/font-awesome.min.css')}}">
-  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='/css/bootstrap.min.css')}}">
+  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/font-awesome.min.css')}}">
+  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/bootstrap.min.css')}}">
 
-  <link rel="stylesheet" href="{{url_for('static', filename='/css/style.css')}}">
+  <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
 
 </head>
 
@@ -29,8 +29,9 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="{{url_for('index')}}"><img src="{{url_for('static', filename='img/logo.png')}}"
-                  class="img-responsive" style="width:400px;height: 50px; margin-top: -18px;"></a>
+              <a class="navbar-brand" href="{{url_for('index')}}"><img
+                  src="{{url_for('static', filename='img/logo.png')}}" class="img-responsive"
+                  style="width:400px;height: 50px; margin-top: -18px;"></a>
             </div>
             <div class="collapse navbar-collapse navbar-right" id="myNavbar">
               <ul class="nav navbar-nav">
@@ -57,8 +58,11 @@
                 <fieldset>
 
                   <div class="form-group">
-                    <b><p style="color:rgb(65, 26, 8); font-size: 22px; margin-bottom: 23px;">THYROID DISEASE PREDICTION</p></b>
-                    
+                    <b>
+                      <p style="color:rgb(65, 26, 8); font-size: 22px; margin-bottom: 23px;">THYROID DISEASE PREDICTION
+                      </p>
+                    </b>
+
                     <label class="col-md-4 control-label"> </label>
                     <div class="col-md-4 inputGroupContainer">
                       <div class="input-group">
@@ -337,7 +341,7 @@
           </div>
         </div>
       </div>
-    
+
   </section>
 
   <!--about-->
@@ -368,11 +372,7 @@
                   <li>4. Change the breast size</li>
                   <li>5. Fluid comig from the nipple</li>
                   <li>6. Red scaly patch of skin on the breast</li>
-
-
                 </ul>
-
-
               </div>
             </div>
             <div class="more-features-box-text">
@@ -386,8 +386,6 @@
                   <li>4. Maintain your blood sugar level</li>
                   <li>5. Keeps your body physically active</li>
                 </ul>
-
-
               </div>
             </div>
             <div class="more-features-box-text">
@@ -401,13 +399,8 @@
                   <li>4. Hormonal therapy</li>
                   <li>5. Radition therapy</li>
                 </ul>
-
-
               </div>
-
             </div>
-
-            <div> </div>
           </div>
         </div>
       </div>
