--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -231,7 +231,7 @@
                 <li><a href="http://rohanpatankar.netlify.app/"><i class="fa fa-globe"></i></a></li>
                 <li><a href="https://www.linkedin.com/mwlite/in/rohan-patankar-2aa707213"><i
                       class="fa fa-linkedin"></i></a></li>
-                <li><a href="https://github.com/ROHANPATAKAR"><i class="fa fa-github"></i></a></li>
+                <li><a href="https://github.com/rohanpatankar926"><i class="fa fa-github"></i></a></li>
               </ul>
             </div>
           </div>
