update home page

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -208,11 +208,12 @@
         </div>
         <div class="col-md-3 col-sm-3 col-xs-6">
           <div class="thumbnail">
-            <img src="{{url_for('static',filename='img/Developernishant.jpeg')}}" alt="Nishant Banjade"
-              class="team-img">
+            <!-- <img src="{{url_for('static',filename='img/Developernishant.jpeg')}}" alt="Nishant Banjade"
+              class="team-img"> -->
             <div class="caption">
               <h3>Nishant Banjade</h3>
               <p>Machine learning Developer</p>
+              <p>Implemented end-to-end MLOps application and monitored the project</p>
               <ul class="list-inline">
                 <li><a href="http://nixhantme.herokuapp.com/"><i class="fa fa-globe"></i></a></li>
                 <li><a href="https://www.linkedin.com/in/nbanjade/"><i class="fa fa-linkedin"></i></a></li>
@@ -223,10 +224,11 @@
         </div>
         <div class="col-md-3 col-sm-3 col-xs-6">
           <div class="thumbnail">
-            <img src="{{url_for('static',filename='img/Developerrohan.jpg')}}" alt="rohan Patankar" class="team-img">
+            <!-- <img src="{{url_for('static',filename='img/Developerrohan.jpg')}}" alt="rohan Patankar" class="team-img"> -->
             <div class="caption">
               <h3>Rohan Patankar</h3>
               <p>Machine Learning Developer</p>
+              <p>Implemented ML algorithm and written testcases and circleci scripts.</p>
               <ul class="list-inline">
                 <li><a href="http://rohanpatankar.netlify.app/"><i class="fa fa-globe"></i></a></li>
                 <li><a href="https://www.linkedin.com/mwlite/in/rohan-patankar-2aa707213"><i
@@ -238,11 +240,12 @@
         </div>
         <div class="col-md-3 col-sm-3 col-xs-6">
           <div class="thumbnail">
-            <img src="{{url_for('static',filename='img/Developerapsara.png')}}" alt="Apsara Budhathoki"
-              class="team-img">
+            <!-- <img src="{{url_for('static',filename='img/Developerapsara.png')}}" alt="Apsara Budhathoki"
+              class="team-img"> -->
             <div class="caption">
               <h3>Apsara Budhathoki</h3>
               <p>Frontend Web developer</p>
+              <p>Designed and Developed website and also written documentation.</p>
               <ul class="list-inline">
                 <li><a href="https://apsarabudhathoki.github.io/apsarabudathoki/"><i class="fa fa-globe"></i></a></li>
                 <li><a href="https://www.linkedin.com/in/apsara-budhathoki-b0884a1b4/"><i
